# Pico-UART-BT-bridge

./: CMakeLists.txt  main.c  readme.md
.github/workflows/: cmake.yml
